# scout

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.chainlit  Dockerfile.frontend  Procfile.dev  README.md  cookies.txt  data-explorer-mcp-design.md  docker-compose.yml  findings.md  progress.md  pyproject.toml  registry_password.sh  task_plan.md  tasks.py  test-embed-messaging.html  todos.md  worktrees.json
.github/workflows/: ci.yml  claude-review.yml  deploy-labs.yml  deploy.yml  docs.yml
.kamal/: secrets
.kamal/hooks/: pre-connect  pre-deploy
apps/agents/: mcp_client.py  models.py  tracing.py
apps/agents/graph/: __init__.py  base.py  nodes.py  state.py
apps/agents/memory/: __init__.py  checkpointer.py
apps/agents/prompts/: __init__.py  artifact_prompt.py  base_system.py
apps/agents/tools/: __init__.py  artifact_tool.py  commcare_knowledge_tool.py  describe_table.py  learning_tool.py  recipe_tool.py  sql_tool.py
apps/agents/utils/: commcare_auth.py
apps/artifacts/: admin.py  models.py  urls.py  views.py
apps/artifacts/api/: serializers.py  views.py
apps/artifacts/migrations/: 0001_initial.py  0002_alter_artifact_version_and_more.py  0002_initial.py  0003_rescope_to_workspace.py
apps/artifacts/services/: export.py
apps/artifacts/tests/: test_artifact_query_data.py  test_share_api.py
apps/chat/: auth_urls.py  checkpointer.py  helpers.py  models.py  stream.py  thread_views.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py  0002_add_thread_sharing_fields.py  0002_initial.py  0003_thread_tenant_membership_alter_thread_project.py  0005_add_custom_workspace_fk.py
apps/datasources/: csv_import.py  urls.py
apps/datasources/connectors/: commcare_connect.py  registry.py
apps/datasources/services/: __init__.py  materialized_data.py
apps/knowledge/: admin.py  models.py  urls.py
apps/knowledge/api/: serializers.py  views.py
apps/knowledge/migrations/: 0001_initial.py  0002_initial.py  0003_agentlearning_promoted_to_id.py  0004_alter_agentlearning_confidence_score.py  0005_simplify_knowledge.py  0006_rescope_to_workspace.py  0007_add_custom_workspace_fk.py
apps/knowledge/services/: __init__.py  eval_runner.py  retriever.py
apps/projects/: admin.py  models.py  tasks.py  urls.py  views.py
apps/projects/api/: data_dictionary.py  permissions.py  serializers.py  views.py  workspace_views.py
apps/projects/migrations/: 0001_initial.py  0002_initial.py  0003_project_is_active_project_readonly_role.py  (+8 more)
apps/recipes/: models.py  urls.py
apps/transformations/: serializers.py  urls.py  views.py
apps/users/: adapters.py  admin.py  apps.py  auth_views.py  models.py  signals.py  views.py
apps/workspace/: admin.py  apps.py  models.py  urls.py  views.py
apps/workspaces/: admin.py  apps.py  models.py  permissions.py  tasks.py  urls.py  views.py  workspace_resolver.py
chainlit_app/: app.py  auth.py
config/: asgi.py  celery.py  deploy-frontend.yml  deploy-mcp.yml  deploy-worker.yml  deploy.yml  urls.py  wsgi.py
config/settings/: base.py  connectlabs.py  development.py  production.py  test.py
docs/: IMPLEMENTATION_PLAN.md  data-explorer-mcp-design.md  deploy-connectlabs-setup.md
docs/demos/: data-materialization.md
docs/docs/admin/: index.md  (+5 more)
docs/plans/: 2026-02-10-admin-ui-design.md  2026-02-10-admin-ui-implementation.md  2026-02-10-data-materialization-design.md  2026-02-16-mcp-chat-integration-tests.md  2026-02-17-oauth-token-passthrough-design.md  2026-02-18-data-explorer-vertical-slice.md  2026-02-18-oauth-ui-design.md  2026-02-18-oauth-ui-implementation.md  2026-02-20-api-key-auth-design.md  2026-02-20-remove-projects-design.md  2026-03-02-deploy-connectlabs-design.md  2026-03-02-deploy-connectlabs-impl.md  2026-03-09-phase9-multi-tenant-workspaces.md  2026-03-25-transformation-architecture-plan.md  2026-03-25-transformation-implementation-plan.md  2026-04-14-async-conversion-remaining-phases.md  2026-04-14-phase2-httpx-conversion.md
frontend/: bun.lockb  eslint.config.js  index.html  nginx.conf  nginx.prod-kamal.conf  nginx.prod.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/public/: widget.js
frontend/src/: App.tsx  config.ts  index.css  main.tsx  router.tsx
infra/: scout-stack.yml
mcp_server/: auth.py  context.py  envelope.py  pipeline_registry.py  server.py
mcp_server/loaders/: commcare_cases.py  commcare_metadata.py  connect_assessments.py  connect_base.py  connect_completed_modules.py  connect_completed_works.py  connect_invoices.py  connect_payments.py  connect_users.py  connect_visits.py  ocs_base.py  ocs_experiments.py  ocs_messages.py  ocs_participants.py  ocs_sessions.py
mcp_server/services/: materializer.py  metadata.py  query.py  sql_validator.py
scripts/: fetch-deploy-env.sh  resolve-secrets.sh  setup_oauth_apps.py  setup_project_db.py  start_dev.sh
tests/: conftest.py  test_agent_graph.py  test_agent_workspace_routing.py  test_artifacts.py  test_auth.py  test_backfill_readonly_roles.py  test_commcare_knowledge_tool.py  test_commcare_loader.py  test_commcare_staging_generator.py  test_connect_base_loader.py  test_connect_data_loaders.py  test_connect_tenant_resolution.py  test_connect_workspace_smoke.py  test_custom_workspace.py  test_custom_workspace_api.py  test_data_dictionary.py  test_data_dictionary_api.py  test_explicit_workspace_context.py  test_knowledge_retriever.py  test_lineage.py  test_materializer.py  test_mcp_chat_integration.py  test_mcp_client.py  test_mcp_server.py  test_mcp_tenant_tools.py  test_mcp_token_refresh.py  test_mcp_workspace_context.py  test_mcp_workspace_routing.py  test_me_view_connect_resolution.py  test_metadata_service.py  test_models.py  test_multitenant_smoke.py  test_oauth_tokens.py  test_ocs_base_loader.py  test_ocs_data_loaders.py  test_ocs_materializer.py  test_ocs_tenant_resolution.py  test_pipeline_registry.py  test_projects_models.py  test_purge_synced_data.py  (+29 more)
tests/agents/: test_schema_context.py
tests/smoke/: .env.example  conftest.py  test_custom_workspace.py
(+149 files in other folders)
