[project]
name = "scout"
version = "0.1.0"
description = "Self-hosted data agent platform for AI-powered database querying"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Django
    "django>=5.0",
    "djangorestframework>=3.15",
    "django-environ>=0.11",
    "psycopg2-binary>=2.9",

    # Auth
    "django-allauth>=65.0",
    "cryptography>=42.0",

    # LangGraph / LangChain
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
    "langchain-core>=0.3",
    "langgraph-checkpoint-postgres>=2.0",

    # SQL validation
    "sqlglot>=25.0",

    # Visualization & data
    "plotly>=5.0",
    "pandas>=2.0",
    "kaleido>=0.2",

    # Frontend
    "chainlit>=1.3",

    # Security / HTML sanitization
    "bleach>=6.0",

    # Caching
    "redis>=5.0",

    # Async database (required by Chainlit data layer)
    "asyncpg>=0.29",

    # Utilities
    "python-dotenv>=1.0",

    # Production server
    "gunicorn>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "factory-boy>=3.3",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "config"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
addopts = "-v --tb=short"
